kubernetes/manifests/seafile/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: seafile
spec:
  selector:
    app: mariadb
  clusterIP: None
  ports:
  - port: 3306
    targetPort: mariadb
