kubernetes/manifests/seafile/memcached-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached-svc
  namespace: seafile
spec:
  selector:
    app: memcached
  ports:
    - port: 11211
      targetPort: 11211
