kubernetes/manifests/seafile/seafile-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile-svc
  namespace: seafile
spec:
  selector:
    app: seafile
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
