kubernetes/manifests/seafile/seafile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile-ingress
  namespace: seafile
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: seafile.kacper-nxn.pl
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: seafile-svc
            port: 
              number: 80
